# cas-dl-compvis-exercises-fs2026

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  publish.yml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  cli-tools.sh  devcontainer.json  post-create.sh  post-start.sh
.github/workflows/: publish.yml
docs/: datasets.md
exercises/: template.ipynb
exercises/00_pytorch/: exercise.ipynb  requirements.txt  solution.ipynb
exercises/01_image_data/: README.md  exercise.ipynb  requirements.txt  solution.ipynb
exercises/02_classification/: exercise.ipynb  requirements.txt  solution.ipynb
exercises/03_retrieval/: exercise.ipynb  solution.ipynb
exercises/04_adaptation/: exercise.ipynb  solution.ipynb
exercises/04_adaptation_lora/: exercise.ipynb  requirements.txt  solution.ipynb
exercises/05_backbones/: exercise.ipynb  requirements.txt  solution.ipynb
notebooks/: 01-mw-inspect-dataset-kgalagadi.ipynb  02-mw-inspect-cct20.ipynb  03-mw-inspect-deepfashion.ipynb  04-mw-inspect-abo.ipynb  05-mw-inspect-ser.ipynb
notebooks/00_pytorch/: exercise.ipynb  solution.ipynb
scripts/: dataset_registry.py  download_dataset.py  publish_to_main.py  strip_solutions.py
scripts/prepare_datasets/: C1_quality_check.ipynb  C2_package.py  C3_upload_to_hf.py  C4_notebook_helper.py  abo_furniture_card.md  cats_vs_dogs_card.md  cct20_card.md  concrete_cracks_card.md  download_images.py  eurosat_card.md  kgalagadi_card.md  ser_balanced_card.md  ser_sampled_card.md
scripts/prepare_datasets/abo/: 01_explore_metadata.py  02_filter_sample.py  03_download_images.py  04_quality_check.ipynb  selected_abo_categories.json
scripts/prepare_datasets/cats_vs_dogs/: 01_download.py  02_restructure.py
scripts/prepare_datasets/cct20/: B1_explore_metadata.py  B2_filter_subset.py  selected_cct20.json
scripts/prepare_datasets/concrete_cracks/: 01_download.py  02_restructure.py
scripts/prepare_datasets/deepfashion/: 01_explore_metadata.py  02_filter_subset.py  03_copy_images.py  04_quality_check.ipynb  05_package_internal.py  06_notebook_helper.py
scripts/prepare_datasets/eurosat/: 01_download.py  02_restructure.py
scripts/prepare_datasets/kgalagadi/: A1_explore_metadata.py  A2_filter_deduplicate.py  selected_kgalagadi.json
scripts/prepare_datasets/ser/: 01_download_metadata.py  02_explore_species.py  03_filter_manifest.py  04_download_images.py  05_crop_images.py  06_quality_check.ipynb  07_upload_hf.py  08_restructure.py  09_build_sampled_manifest.py  10_download_sampled.py  11_crop_sampled.py  dataset_card.md
src/dl_cv_exercises/: classification.py  utils.py
src/dl_cv_exercises/data/: image_folder.py  pattern.py
tests/: test_strip_solutions.py
