[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dl-cv-exercises"
description = "Deep Learning for Computer Vision Lecture Tools"
authors = ["Marco Willi <marco.willi@fhnw.ch>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

# --------- data & analysis -------- #
pandas = "^3.0.2"
numpy = "^2.4.4"

# --------- visualize -------- #
matplotlib = "^3.10.8"
seaborn = "^0.13.2"
plotly = "^6.6.0"
altair = "^6.0.0"

# --------- data & image processing --------- #
pillow = "^12.2.0"
opencv-python-headless = "^4.13.0.92"

# --------- machine learning --------- #
mlxtend = "^0.24.0"
scikit-learn = "^1.8.0"
scikit-image = "^0.26.0"
torch = "^2.11.0"
torchvision = "^0.26.0"
torchmetrics = "^1.9.0"
torchshow = "^0.5.2"
torchviz = "^0.0.3"
torchinfo = "^1.8.0"
visualtorch = "^0.2.4"
lightning = "^2.6.1"
transformers = "^5.5.0"
kornia = "^0.8.2"

# --------- Hugging Face Ecosystem --------- #
datasets = "^4.8.4"
diffusers = "^0.37.1"
accelerate = "^1.13.0"
bitsandbytes = "^0.49.2"
sentencepiece = "^0.2.1"
huggingface_hub = "^1.9.0"
timm = "^1.0.26"

# --- generative ai --- #
openai = "^2.1.0"
replicate = "^1.0.7"
google-generativeai = "^0.8.6"

# --------- Experiment Tracking --------- #
tensorboard = "^2.20.0"
wandb = "^0.25.1"

# --------- jupyter --------- #
jupyter = "^1.1.1"
jupyterlab = "^4.5.6"
jupyter-cache = "^1.0.1"
ipykernel = "^6.30.1"
ipywidgets = ">=8"
xeus-python = "^0.17.6"
python-gitlab = "^8.2.0"

# --------- HTTP & APIs --------- #
requests = "^2.33.1"

# --------- Utilities --------- #
tqdm = "^4.67.3"
python-dotenv = "^1.2.2"
pyrootutils = "^1.0.4"
gdown = "^5.2.1"
tabulate = "^0.10.0"
peft = "^0.19.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "*"
argcomplete = "*"
pytest = "*"
mypy = "*"
pre-commit = "*"
rich = "*"

[tool.poetry.group.extra]
optional = true

[tool.poetry.group.extra.dependencies]
optuna = "*"
captum = "*"
pyppeteer = "*"

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff-specific rules
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
]
ignore = [
    "E501", # line too long, handled by formatter
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "E203", # whitespace before ':' (conflicts with formatter)
]

[tool.ruff.lint.per-file-ignores]
"**/*.ipynb" = ["F401", "I", "E402", "W291", "B018", "F821"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
force-single-line = false
force-sort-within-sections = false
split-on-trailing-comma = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
